--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dtp-mobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,15 +9,48 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.46",
+    "@babel/preset-env": "^7.26.9",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.8.4",
+    "babel-preset-expo": "^9.9.0",
+    "expo": "^52.0.0",
     "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react": "^18.3.1",
+    "react-native": "^0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native/metro-config": "^0.79.1",
+    "@types/hammerjs": "^2.0.46",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/node": "^22.14.1",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@types/react-native": "^0.72.8",
+    "@types/stack-utils": "^2.0.3",
+    "@types/yargs": "^17.0.33",
+    "@types/yargs-parser": "^21.0.3",
+    "expo-module-scripts": "^4.0.5",
+    "nativewind": "^2.0.11",
+    "react-native-css-transformer": "^2.0.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.8.3"
   },
   "private": true
 }
