--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,38 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "src/*"
+      ]
+    },
+    "jsx": "react-native",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "types": [
+      "node",
+      "react",
+      "react-native",
+      "hammerjs",
+      "istanbul-lib-coverage",
+      "istanbul-lib-report",
+      "prop-types",
+      "stack-utils",
+      "yargs",
+      "yargs-parser"
+    ],
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "lib": ["es2020", "dom"]
+  },
+  "include": [
+    "src/**/*",
+    "nativewind-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
