--- a/app.json
+++ b/app.json
@@ -23,6 +23,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "apiBaseUrl": "https://dtp-frontend-three.vercel.app"
     }
   }
 }
