--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.26.9",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
     "@types/axios": "^0.9.36",
     "axios": "^1.8.4",
     "babel-preset-expo": "^9.9.0",
@@ -21,7 +24,8 @@
     "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "zustand": "^4.5.6"
   },
