--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@types/axios": "^0.9.36",
+    "@types/react-native-calendars": "^1.1264.7",
     "axios": "^1.8.4",
     "babel-preset-expo": "^9.9.0",
     "expo": "^52.0.0",
     "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
     "react-native": "^0.76.9",
+    "react-native-calendars": "^1.1311.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
